--- a/notebook/kc3977.md
+++ b/notebook/kc3977.md
@@ -1,5 +1,7 @@
     ## Week of 23 January 2023
 
 Project Work:
-    * [Onboarding Lab 1] (link to repo) Completed Lab 1
-    * [Design Notebook] (link to pull request)
+    * [Onboarding Lab 1] (https://github.com/kc3977/VIP/tree/master/week_one_lab) Completed Lab 1
+    * [Design Notebook] (https://github.com/kc3977/VIP/tree/master/notebook) Started repo for the design notebook
+
+Completed Oreintation Lab 1, configured git and GitHub access for use with Anubis because my computer recently had a stroke and I don't trust it to hold anything even remotely resembling anything that could be somewhat important.
