--- a/notebook/kc3977.md
+++ b/notebook/kc3977.md
@@ -4,4 +4,8 @@ Project Work:
     * [Onboarding Lab 1] (https://github.com/kc3977/VIP/tree/master/week_one_lab) Completed Lab 1
     * [Design Notebook] (https://github.com/kc3977/VIP/tree/master/notebook) Started repo for the design notebook
 
-Completed Oreintation Lab 1, configured git and GitHub access for use with Anubis because my computer recently had a stroke and I don't trust it to hold anything even remotely resembling anything that could be somewhat important.
+Completed Oreintation Lab 1, configured git and GitHub access for use with Anubis
+because my computer recently had a stroke and I don't trust it to hold anything 
+even remotely resembling anything that could be somewhat important.
+
+Also started a secondary VIP repo for my work and notebook.
